# Game-Engine-2D

./: .gitignore  CMakeLists.txt  Instruction.txt
headers/: engine.hpp
src/: DrawableObject.h  ShapeObject.h  TransformableObject.h  draw.cpp  engine.cpp  input.cpp  main.cpp
src/LineSegment/: LineSegment.cpp  LineSegment.h
src/Player/: Player.cpp  Player.h
src/Point2d/: Point2d.cpp  Point2d.h
src/Primitives/: PrimitiveRenderer.cpp  PrimitiveRenderer.hpp
